--- a/src/theme/css/chrome.css
+++ b/src/theme/css/chrome.css
@@ -411,7 +411,7 @@ ul#searchresults span.teaser em {
 
 .chapter {
     list-style: none outside none;
-    padding-left: 0;
+    padding-left: 10px;
     line-height: 2.2em;
 }
 
